--- a/custom_components/ble_adjustable_bed/translations/en.json
+++ b/custom_components/ble_adjustable_bed/translations/en.json
@@ -2,10 +2,10 @@
   "config": {
     "step": {
       "user": {
-        "title": "BK-Light iPixel",
-        "description": "Select the BK-Light iPixel Bluetooth device",
+        "title": "BLE Adjustable Bed",
+        "description": "Configure your Bluetooth adjustable bed",
         "data": {
-          "address": "Bluetooth device",
+          "address": "Bluetooth MAC address",
           "name": "Name"
         }
       }
